[package]
name = "anvil"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.11.0", features = [
  "provider-http",
  "provider-ws",
  "sol-types",
  "json-abi",
  "reqwest",
  "contract",
  "signer-local",
  "signer-aws",
  "node-bindings",
] }
anyhow = "1.0.95"
futures = "0.3.31"
hex = "0.4.3"
once_cell = "1.20.3"
parking_lot = "0.12.3"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "test-util",
] }
